# aptos-core

./: .gitignore  Cargo.toml  Makefile  StartupProfileData-NonInteractive
.cargo/: config.portable.toml  config.toml
.github/: forge-suite-subsystems.toml
.github/actions/cli-rust-setup/: action.yaml
.github/actions/rust-batch-encryption/: action.yaml
.github/actions/rust-doc-tests/: action.yaml
.github/actions/rust-lints/: action.yaml
.github/actions/rust-setup/: action.yaml
.github/actions/rust-setup-mac/: action.yaml
.github/actions/rust-smoke-tests/: action.yaml
.github/actions/rust-targeted-unit-tests/: action.yaml
.github/actions/rust-unit-tests/: action.yaml
.github/actions/sccache-setup/: action.yaml
.github/actions/test-target-determinator/: action.yaml
.github/workflows/: binary-release.yaml  cli-release.yaml  coverage-move-only.yaml  coverage.yaml  docker-build-test.yaml  find-packages-with-undeclared-feature-dependencies.yaml  indexer-processor-testing.yaml  lint-test.yaml  run-gas-calibration.yaml  windows-build.yaml  workflow-run-execution-performance.yaml  workflow-run-module-verify.yaml  workflow-run-replay-verify.yaml
api/: Cargo.toml
api/doc/: openapi.yaml  spec.json  spec.yaml
api/goldens/v1/: aptos_api__tests__accounts_test__test_bcs_account_modules.bcs  aptos_api__tests__accounts_test__test_bcs_account_resources.bcs
api/src/: accounts.rs  context.rs  events.rs  index.rs  lib.rs  metrics.rs  runtime.rs  state.rs  tables.rs  transactions.rs
api/src/poem_backend/: accounts.rs  events.rs  state.rs  transactions.rs
api/src/v2/: mod.rs  (+7 more)
api/types/: Cargo.toml
aptos-move/aptos-resource-viewer/: Cargo.toml
aptos-move/aptos-vm/: Cargo.toml
aptos-move/aptos-vm-types/: Cargo.toml
aptos-move/aptos-workspace-server/: Cargo.toml
aptos-move/block-executor/: Cargo.toml
aptos-move/cli/: BUILD_WASM_HOWTO.md  COMMAND_CLASSIFICATION.md  Cargo.toml  PHASE3_RESULTS.md  PHASE4_VFS_DESIGN.md  PHASE5_FINAL_RECOMMENDATION.md  WASM_EVALUATION.md  WASM_EVALUATION_README.md
aptos-move/flow/: Cargo.toml  README.md
aptos-move/framework/: Cargo.toml
aptos-move/move-compiler-wasm/: BUILD_SUCCESS.md  DEPLOYMENT_PLAN.md  DONE.md  FINAL_STATUS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  MAINTAINABILITY_ASSESSMENT.md  NEXT_STEPS.md  OPTION_B_STATUS.md  PHASE1_ANALYSIS.md  PHASE2_DESIGN.md  QUICKSTART_FINAL.md  README.md  RUNNING_DEMOS.md  STATUS.md  SUCCESS.md
aptos-move/move-decompiler-wasm/: COMPLETE_SETUP.md  DEMO_HOWTO.md  QUICKSTART.md  STATUS.md  TYPESCRIPT_SETUP.md
aptos-move/mvhashmap/: Cargo.toml
aptos-node/: Cargo.toml
aptos-node/src/: consensus.rs  lib.rs  main.rs  services.rs
config/: Cargo.toml
config/src/: lib.rs  network_id.rs
consensus/: Cargo.toml
consensus/consensus-wiring/: Cargo.toml
consensus/consensus-wiring/src/: lib.rs
consensus/src/: epoch_manager.rs  lib.rs
crates/aptos/: CHANGELOG.md  Cargo.toml
crates/aptos-admin-service/: Cargo.toml
crates/aptos-cli-base/: Cargo.toml
crates/aptos-cli-common/: Cargo.toml
crates/aptos-cli-common/src/: account.rs  command.rs  config.rs  encryption.rs  faucet.rs  file.rs  keys.rs  lib.rs  move.rs  options.rs  parse.rs  rand.rs  raw_config.rs  rest.rs  transactions.rs  types.rs  utils.rs
crates/aptos-cli-config/: Cargo.toml
crates/aptos-cli-config/src/: config.rs  lib.rs  rand.rs
crates/aptos-debugger/: Cargo.toml
crates/aptos-faucet-cli/: Cargo.toml
crates/aptos-genesis/: Cargo.toml
crates/aptos-jemalloc/: Cargo.toml
crates/aptos-localnet/: Cargo.toml
crates/aptos-profiler/: Cargo.toml
crates/aptos-profiler/src/: memory_profiler.rs
crates/aptos-rest-client/: Cargo.toml
crates/aptos-rosetta/: Cargo.toml
crates/aptos-rosetta-cli/: Cargo.toml
crates/aptos-telemetry-service/: Cargo.toml
crates/transaction-emitter-lib/: Cargo.toml
crates/windows-support/: Cargo.toml
crates/windows-support/src/: lib.rs
devtools/aptos-cargo-cli/: Cargo.toml
docker/builder/: builder.Dockerfile  docker-bake-rust-all.hcl
docker/rosetta/: README.md  rosetta.Dockerfile
execution/block-partitioner/: Cargo.toml
execution/executor-benchmark/: Cargo.toml
mempool/: Cargo.toml
network/builder/: Cargo.toml
network/discovery/: Cargo.toml
network/framework/: Cargo.toml
network/types/: Cargo.toml
network/types/src/: constants.rs  error.rs  lib.rs  network_id.rs  peer.rs  role_type.rs
peer-monitoring-service/types/: Cargo.toml
scripts/: dev_setup.sh  sccache_setup.sh  update_docker_images.py  windows_dev_setup.ps1
scripts/binary_release/: build_binary_release.ps1  build_binary_release.sh  install_binary.ps1  install_binary.sh
scripts/cli/: build_cli_release.ps1  build_cli_release.sh  build_cli_release_static.sh  minimal_cli_build.ps1  minimal_cli_build.sh  minimal_windows_cli_build.ps1
sdk/src/: types.rs
storage/db-tool/: Cargo.toml
storage/schemadb/: Cargo.toml
storage/scratchpad/: Cargo.toml
testsuite/forge-cli/: Cargo.toml
testsuite/fuzzer/: Cargo.toml
testsuite/generate-format/: Cargo.toml
types/: Cargo.toml
types/src/: lib.rs  proptest_types.rs
(+416 files in other folders)
