[package]
name = "aptos-cli-common"
version = "0.1.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "CLI common constructs to remove dependencies"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2018"
build = "build.rs"

[dependencies]
async-trait = "0.1.56"
base64 = "0.13.0"
bcs = "0.1.3"
clap = "3.2.11"
clap_complete = "3.2.3"
hex = "0.4.3"
itertools = "0.10.3"
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = "1.0.137"
serde_json = "1.0.81"
shadow-rs = "0.16.1"

aptos-cli-base = { path = "../aptos-cli-base" }
aptos-cli-config = { path = "../aptos-cli-config" }
aptos-crypto = { path = "../aptos-crypto", features = [] }
aptos-faucet = { path = "../aptos-faucet" }
aptos-rest-client = { path = "../../crates/aptos-rest-client" }
aptos-sdk = { path = "../../sdk" }
aptos-telemetry = { path = "../aptos-telemetry" }
aptos-types = { path = "../../types" }

[build-dependencies]
shadow-rs = "0.16.1"