[package]
name = "aptos-profiler"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }

[target.'cfg(all(unix, not(target_env = "musl")))'.dependencies]
jemalloc-sys = { workspace = true }
pprof = { workspace = true }
