[package]
name = "windows-support"
version = "0.0.0"
authors = ["Aptos Labs <opensource@aptoslabs.com>"]
description = "Library for Aptos transaction emitter"
repository = "https://github.com/aptos-labs/aptos-core"
homepage = "https://aptoslabs.com"
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
futures = "0.3.21"
