[package]
name = "aptos-network-types"
description = "Lightweight types shared by network crates (PeerRole, NetworkId, etc.)"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-crypto = { workspace = true }
aptos-short-hex-str = { workspace = true }
aptos-types = { workspace = true }
poem-openapi = { workspace = true, optional = true }
serde = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
aptos-crypto = { workspace = true }
aptos-types = { workspace = true, features = ["fuzzing"] }
bcs = { workspace = true }
serde_yaml = { workspace = true }

[features]
default = []
fuzzing = ["aptos-crypto/fuzzing", "aptos-types/fuzzing"]
openapi = ["poem-openapi"]
testing = []

[package.metadata.cargo-machete]
ignored = ["strum"]
